[package]
name = "cj_8"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Another Chip-8 emulator written in Rust"
readme = "README.md"
homepage = "https://github.com/CJPohl/CJ-8"
repository = "https://github.com/CJPohl/CJ-8"
keywords = ["chip-8", "emulator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
rand = "*"